add class code along solutions

--- a/index.html
+++ b/index.html
@@ -4,13 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bug Hunt Page</title>
-    <script src="script.js"></script>
 </head>
 <body>
-    <h1>Welcome to the Buggy Page!</h1>
+    <div id="text-class">
+        <h1 class="text-style">Welcome to the Buggy Page!</h1>
+        <p class="text-style">All about animals</p>
+    </div>
+    
 
-    <img src="images/incorrect-path.jpg" alt="Missing Image" id="buggy-image">
+    <img src="cat.jpg" alt="big-cat" id="buggy-image">
 
     <button id="buggy-button">Click Me!</button>
+    <script src="script.js"></script>
+
 </body>
 </html>
+ 
